--- a/package.json
+++ b/package.json
@@ -20,5 +20,14 @@
     "option"
   ],
   "author": "avikantz",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-native": "^0.52.1"
+  },
+  "directories": {
+    "example": "example"
+  },
+  "devDependencies": {}
 }
