--- a/example/Demo/package.json
+++ b/example/Demo/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "devDependencies": {
     "jest-expo": "25.0.0",
-    "react-native-scripts": "1.10.0",
+    "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "expo": "^25.0.0",
+    "place-dropdown": "^1.0.1",
     "react": "16.2.0",
     "react-native": "^0.52.1"
   }
